[gd_scene load_steps=8 format=3 uid="uid://cuacmx373pbca"]

[ext_resource type="Script" path="res://Scenes/ExportSettings.gd" id="1_4u2fv"]
[ext_resource type="Texture2D" uid="uid://dxlijcr8f5lh" path="res://Assets/WhiteBG.jpg" id="2_af2p7"]
[ext_resource type="FontFile" uid="uid://dehjo7qp3a0ua" path="res://Fonts/Teko-SemiBold.ttf" id="3_fvlmh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30ool"]
bg_color = Color(0.0705882, 0.647059, 0.435294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy0if"]
bg_color = Color(0.701961, 0.282353, 0.352941, 1)
border_width_left = 5
border_width_top = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uh3us"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8hpoe"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4u2fv")

[node name="TexBack" type="TextureRect" parent="."]
modulate = Color(0.0705882, 0.647059, 0.435294, 1)
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_af2p7")
expand_mode = 1

[node name="TexFront" type="TextureRect" parent="."]
modulate = Color(0.701961, 0.282353, 0.352941, 1)
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 576.0
texture = ExtResource("2_af2p7")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 128.0
offset_top = 128.0
offset_right = 1024.0
offset_bottom = 244.0

[node name="TextFilename" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/background_color = Color(0, 0, 0, 0.196078)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_background_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_fvlmh")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter your file name."
scroll_fit_content_height = true

[node name="TextFilepath" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/background_color = Color(0, 0, 0, 0.196078)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_background_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_fvlmh")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter your file save path."
scroll_fit_content_height = true

[node name="ButtonBack" type="Button" parent="."]
offset_left = 984.0
offset_top = 72.0
offset_right = 1080.0
offset_bottom = 105.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_fvlmh")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxFlat_30ool")
theme_override_styles/hover = SubResource("StyleBoxFlat_30ool")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy0if")
theme_override_styles/disabled = SubResource("StyleBoxFlat_uh3us")
theme_override_styles/focus = SubResource("StyleBoxFlat_30ool")
text = "Back"

[node name="ErrorMessage" type="TextEdit" parent="."]
visible = false
offset_left = 233.0
offset_top = 317.0
offset_right = 937.0
offset_bottom = 376.0
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_fvlmh")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_8hpoe")
theme_override_styles/focus = SubResource("StyleBoxFlat_8hpoe")
theme_override_styles/read_only = SubResource("StyleBoxFlat_8hpoe")
text = "Error : Please fill valid file name and file save path above."
editable = false
selecting_enabled = false
scroll_fit_content_height = true

[node name="ButtonSave" type="Button" parent="."]
offset_left = 508.0
offset_top = 448.0
offset_right = 644.0
offset_bottom = 510.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_fvlmh")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_30ool")
theme_override_styles/hover = SubResource("StyleBoxFlat_30ool")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hy0if")
theme_override_styles/disabled = SubResource("StyleBoxFlat_uh3us")
theme_override_styles/focus = SubResource("StyleBoxFlat_30ool")
text = "Save"

[connection signal="mouse_entered" from="VBoxContainer/TextFilename" to="." method="_on_text_filename_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/TextFilename" to="." method="_on_text_filename_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/TextFilepath" to="." method="_on_text_filepath_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/TextFilepath" to="." method="_on_text_filepath_mouse_exited"]
[connection signal="mouse_entered" from="ButtonBack" to="." method="_on_button_back_mouse_entered"]
[connection signal="mouse_exited" from="ButtonBack" to="." method="_on_button_back_mouse_exited"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="mouse_entered" from="ButtonSave" to="." method="_on_button_save_mouse_entered"]
[connection signal="mouse_exited" from="ButtonSave" to="." method="_on_button_save_mouse_exited"]
[connection signal="pressed" from="ButtonSave" to="." method="_on_button_save_pressed"]
